--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MotorPHPayroll
 endorsed.classpath=
 excludes=
-file.reference.commons-lang3-3.12.0.jar=C:\\Users\\singh\\Downloads\\commons-lang3-3.12.0.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\singh\\Downloads\\jcalendar-1.4.jar
-file.reference.opencsv-5.9.jar=C:\\Users\\singh\\Downloads\\opencsv-5.9.jar
+file.reference.commons-lang3-3.12.0.jar=../../../../../../Downloads/commons-lang3-3.12.0.jar
+file.reference.jcalendar-1.4.zip=../../../../../../Downloads/jcalendar-1.4.zip
+file.reference.opencsv-5.9.jar=../../../../../../Downloads/opencsv-5.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.opencsv-5.9.jar}:\
-    ${file.reference.commons-lang3-3.12.0.jar}
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.jcalendar-1.4.zip}:\
+    ${file.reference.opencsv-5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
