--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/MotorPHPayroll
 endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.12.0.jar=libs/commons-lang3-3.12.0.jar
+file.reference.itextpdf-5.5.13.3.jar=libs/itextpdf-5.5.13.3.jar
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
 file.reference.opencsv-5.9.jar=libs/opencsv-5.9.jar
 includes=**
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.opencsv-5.9.jar}
+    ${file.reference.opencsv-5.9.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
